--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ body {
 <body>
     <div class="app-container">
         <div class="app-header">
-            <h1>🔩 Виртуальный конструктор шуруповёрта 🔧</h1>
+            <h1>🔩 Первые уроки программирования-конструирования 🔧</h1>
             <p>Создавай яркие узоры с деталями и шурупами!</p>
         </div>
 
